saves on the army tree

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2684,8 +2684,18 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TRS_palestine_defense_plan:0 "Palestine Defense Plan"
  TRS_palestine_defense_plan_desc:0 "The most probable enemy will probably strike us from our Egyptian Sinai border. By executing a defensive order in the greater Palestinian region, we can fend off the region against the enemy."
  TRS_damascus_defense_plan:0 "Damascus Defense Plan"
- TRS_damascus_defense_plan_desc:0 "Palestine Defense Plan has ran out of its time and we're still in need of a defensive strategy. To defend Damascus, Beirut and its surroundings, we'll form another defensive plan around Damascus."
+ TRS_damascus_defense_plan_desc:0 "Palestine defense plan has ran out of its time and we're still in need of a defensive strategy. To defend Damascus, Beirut and its surroundings, we'll form another defensive plan around Damascus."
  TRS_damascus_defense_plan_tt:0 "Has selected and ran out of §YPalestine Defense Plan§!"
+ TRS_first_egyptian_offensive:0 "First Egyptian Offensive"
+ TRS_first_egyptian_offensive_desc:0 "As our ambitions aim towards conquering Egypt, we'll carry out a special military plan to be successful. The first plan shall carry out a fast paced recon in order to get familiar with the terrain and prepare for an all-out invasion."
+ TRS_second_egyptian_offensive:0 "Second Egyptian Offensive"
+ TRS_second_egyptian_offensive_desc:0 "The first Egyptian offensive mostly focused on recon in order to prepare for a second greatest conquest. As the part of the secodn stage of our plans to conquer egypt, we'll focus on barging into enemy lines and swiftly conquering egypt."
+ TRS_second_egyptian_offensive_tt:0 "Has selected and ran out of §YFirst Egyptian Offensive§!"
+ TRS_raise_bedouin_volunteers:0 "Raise Bedouin Volunteers"
+ TRS_raise_bedouin_volunteers_desc:0 "As we've already secured support from the Bedouins, we can expand our support in other states."
+ TUR_disband_bedouin_volunteers:0 "Disband Bedouin Volunteers"
+ TUR_disband_bedouin_volunteers_desc:0 "Though we've previously alligned with the Bedouin volunteers, they pose a threat to the centralization of our state. Since they're no longer of use to us, we can disband them and revoke their privilages."
+ TUR_disband_bedouin_volunteers_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£construction_speed_texticon  Local Construction Speed: §G+5%§!\nModify the state's modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.60%§!\n£war_support_modifiericons_texticon  War Support: §R-0.60%§!\n"
 
  TUR_decision_cost_minority:0 "[TUR.turkeyminoritycost]"
  TUR_decision_cost_minority_blocked:0 "[TUR.turkeyminoritycostblocked]"
