--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5061,10 +5061,13 @@
  TUR_desert_reconnisance_tt:0 "Modify §YOttoman 4th Army§! by\n£recon_texticon  Reconnaissance: §G+10.0%§!\n£terrain_penalty_texticon  Terrain Penalty Reduction: §G+10.0%§!\n£recon_texticon  Recon Bonus While Entrenched: §G+5.0%§!\n\n"
  TUR_desert_training_tt:0 "Modify §YOttoman 4th Army§! by\n£attrition_hot_texticon  Heat Attrition: §G-10.00%§!\n£training_speed_texticon  Training time: §G-5.00%§!\n£temperature_hot_texticon  Hot acclimatization gain factor: §G+20.0%§!\n\n"
  TUR_increased_garrisons_tt:0 "Modify §YOttoman 4th Army§! by\n£political_violence_gain_texticon  Resistance Growth Speed: §G-15%§!\n\nModify occupation law §Y$TUR_gendarmerie$§! by: \n $MODIFIER_RESISTANCE_TARGET$: §G-5%§! \n $MODIFIER_RESISTANCE_DAMAGE_TO_GARRISONS$: §G-10.00%§! \n $MODIFIER_REQUIRED_GARRISON_FACTOR$: §G-5%§! \n $MODIFIER_COMPLIANCE_GAIN_ADD$: §R-0.001%§! \n\n"
- TUR_improve_army_command_tt:0 "Modify §YOttoman 4th Army§! by\nBatalion Count Limit: §Y+50§!\n£army_experience  Army Experience Gain: §G+5%§!\n\n"
+ TUR_improve_army_command_tt:0 "Modify §YOttoman 4th Army§! by\nBatalion Count Limit: §Y+100§!\n£army_experience  Army Experience Gain: §G+5%§!\n\n"
  TUR_appoint_kucuk_cemal_tt:0 "[TUR.GetFlag]§Y[TUR.GetName]§!:\n§YMehmed Cemal Paşa§!([TUR.GetFlag]) Joins §Y[TRS.GetNameDef]§!\n§YMehmed Cemal Paşa§! becomes a Chief of Army with the effect:\n£army_experience  Army Experience Gain: §G+0.20§! daily\n£attack_texticon  Division Attack: §G+5.0%§!\n"
  TUR_defense_of_syria_tt:0 "§YZeki Paşa§!([TUR.GetFlag]) Add Defense Skill §G1§!"
  TUR_prepare_for_the_egyptian_expedition_tt:0 "§YZeki Paşa§!([TUR.GetFlag]) Joins §Y[TUR.GetNameDef]§!"
+ TUR_allign_with_bedouin_tribes_tt:0 "Creates a division template named §YBedouin Camelry Corp§!.\n"
+ TUR_allign_with_bedouin_tribes_tt2:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£construction_speed_texticon  Local Construction Speed: §R-5%§!\nModify the state's modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §G+0.60%§!\n£war_support_modifiericons_texticon  War Support: §G+0.60%§!\n"
+ TUR_allign_with_bedouin_tribes_tt3:0 "Unlocks £decision_icon_small §YRaise Bedouin Volunteers§! Decisions. These decisions will let us get §Yfurther troops§! while improving the effects of §YBedouin Support§! national spirit at a cost.\n"
 
  FRA_ww1_dreyfus_exoneration:0 "Dreyfus Exoneration Aftermath"
  FRA_ww1_dreyfus_exoneration_desc:0 "Exempt since 1906, Alfred Dreyfus is still at the heart of the political debate. It is time to close this painful parenthesis of the 3rd Republic."
