--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1062,6 +1062,12 @@
  TRS_local_shipyards_instant_desc:0 "§RWill be removed if any of our core states has a Naval Dockyard§!"
  TRS_syria_defense_plan:0 "Syria Defense Plan"
  TSR_syrian_defense_plan_desc:0 "As we're focusing on defending our Syrian lands rather than pushing towards Egypt, we'll form our tactics focused on holding our lines."
+ TRS_egyptian_offensive:0 "Egyptian Offensive"
+ TRS_egyptian_offensive_desc:0 "The planned Egyptian offensive is set to be a fast recon-oriented expedition towards the Suez Canal and Egypt."
+ TRS_egyptian_offensive_2:0 "Egyptian Offensive"
+ TRS_egyptian_offensive_2_desc:0 "Unlike the first Egyptian offensive, the second offensive is set to be a all-in conquest of egypt with a decisive victory."
+ TRS_bedouin_support:0 "Bedouin Support"
+ TRS_bedouin_support_desc:0 "Bedouins are a nomadic Arab tribe that predominantly occupies Levant and Sinai. As their population is distributed in both our empire and Egypt, having their support is influential for our struggle in the region."
 
 
  TUR_ottoman_industrial_investment:0 "Ottoman Industrial Investment"
@@ -1601,9 +1607,13 @@ FRA_german_reparations:0 "German Reparations"
  CHI_reparation_from_france:0 "Reparations from [FRA.GetName]"
  CHI_reparation_from_france_desc:0 "We valiantly defended our territory against the imperialist views of France. The French government and its Indochina colony were forced to admit defeat and pay heavy reparations for an entire year."
 
+ plus_6_bataillons_limit:0 "Batalion Count Limit: §Y+6§!"
+ plus_12_bataillons_limit:0 "Batalion Count Limit: §Y+12§!"
+ plus_18_bataillons_limit:0 "Batalion Count Limit: §Y+18§!"
  plus_50_bataillons_limit:0 "Batalion Count Limit: §Y+50§!"
  plus_100_bataillons_limit:0 "Batalion Count Limit: §Y+100§!"
  plus_150_bataillons_limit:0 "Batalion Count Limit: §Y+150§!"
+ plus_150_bataillons_limit:0 "Batalion Count Limit: §Y+200§!"
  plus_250_bataillons_limit:0 "Batalion Count Limit: §Y+250§!"
  minus_50_percent_bataillons_limit:0 "Batalion Count Limit: §R-50%§!"
 
