--- a/localisation/english/ww1_unit_limit_l_english.yml
+++ b/localisation/english/ww1_unit_limit_l_english.yml
@@ -47,6 +47,9 @@
  unit_limit_150_unit_bonus_desc:0  "\n   - Ideas: §H+50§!"
  unit_limit_100_unit_bonus_desc:0  "\n   - Ideas: §H+100§!"
  unit_limit_demobilization_desc:0 "\n   - Demobilization: Overrides total to §R200§!"
+ unit_limit_6_unit_bonus_desc:0  "\n   - Ideas: §H+6§!"
+ unit_limit_12_unit_bonus_desc:0  "\n   - Ideas: §H+12§!"
+ unit_limit_18_unit_bonus_desc:0  "\n   - Ideas: §H+18§!"
  unit_limit_50_unit_bonus_desc:0  "\n   - Ideas: §H+50§!"
  unit_limit_balkan_unit_bonus_desc:0 "\n   - Balkan Nation: §G+20%§!"
  unit_limit_chinese_unit_bonus_desc:0 "\n   - China: §G+20%§!"
