--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4962,9 +4962,11 @@ modify_dem_unity10:0 "Modify §1Democratic Unity§! by: §G+5§!"
 modify_dem_unity5:0 "Modify §1Democratic Unity§! by: §G+5§!"
 modify_dem_unityminus5:0 "Modify §1Democratic Unity§! by: §R-5§!"
 modify_dem_unityminus10:0 "Modify §1Democratic Unity§! by: §R-10§!"
+on_select_iuc:0 "When this focus is selected:\nGets event '§YDepartment of Justice Announces Investigation of Several Union§!'\nThis event chain will reveal rampant corruption amongst unions. This will reduce the effects of the §Y'Corrupt Political System'§! national spirit, and could be a §Rdeadly blow to union support§!"
 department_pf_labor:0 "Department of Labour"
 USA_economic_liberalization:0 "Economic Liberalization"
 USA_postal_banking:0 "Cement the Postal Banking System"
+USA_kick_the_rotten_structure:0 "Dismantle the Corrupted Unions"
 USA_empower_the_dol:0 "Empower the Department of Labour"
 USA_american_autarky:0 "American Autarky"
 ww1_USA.52.t:0 "Chaos on our Southern Border"
