RAJ Political Tree Rework + Finished USA-RAJ cooperation decision UPDATE

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -9420,19 +9420,18 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_raj.6.b:0 "Bombay."
  ww1_raj.6.c:0 "We should stay in Calcutta."
 
- ww1_raj.7.t:0 "The Indian National Congress Organised a Boycott!"
- ww1_raj.7.d:0 "Rooted in the ideals of patriotism and self-determination, the Swadeshi Movement advocates for the promotion of indigenous industries and the revitalization of traditional handicrafts, with the aim of reducing India's economic dependence on British goods and empowering local communities. Swadeshi encouraged the use of locally produced goods, such as hand-spun khadi cloth, and urged Indians to boycott British-manufactured products as a form of nonviolent resistance against colonial exploitation. It notably gained momentum following the partition of Bengal in 1905, which was perceived as a divisive tactic by the British colonial administration to weaken Indian unity. The decision to partition Bengal sparked widespread outrage and protests across the country, galvanizing Indians from all walks of life to unite in opposition to British rule.\n\nNow, with the recent reorganisation of the Indian National Congress under the leadership of Mohandas Karamchand Gandhi, a second boycott campaign has been launched against us. They claim that they won't stop until a series of reforms concerning Indian autonomy and representation in the Raj are passed. Ultimately, it is up to us to decide whether or not to press ahead with these reforms."
- ww1_raj.7.a:0 "Let them have their reforms."
- ww1_raj.7.b:0 "We will not give an inch."
- RAJ_eng_approved_reforms:0 "London agreed to reform"
- RAJ_eng_denies_reforms:0 "London didn't agreed to reform"
+ ww1_raj.7.t:0 "The British Wants Closer Cooperation Regarding Indian Nationalists"
+ ww1_raj.7.d:0 "We have been approached by the Viceroy and Governor-General of the Raj, [RAJ.getleader], asking for closer co-operation concerning Indian seditious activities here in the United States. While allowing such cooperation would allow the British to gain information about our own internal affairs, it would undoubtedly help them to repel Indian attempts at rebellion."
+ ww1_raj.7.a:0 "We must help our [ENG.GetFactionName] brother."
+ ww1_raj.7.b:0 "We didn't fought for our independence only to return to puppet status."
+ RAJ_usa_approved_cooperatoin:0 "[USA.GetName] agreed to cooperate"
 
- ww1_raj.8.t:0 "Britain Accepts Reforms!"
- ww1_raj.8.d:0 "Prime Minister [ENG.getleader] has announced today that he will adress the reforms demanded by the National Indian Congress."
+ ww1_raj.8.t:0 "[USA.GetName] Want to Cooperate!"
+ ww1_raj.8.d:0 "President [USA.getleader] has responded positively to our offer to co-operate in matters related to seditious Indian movements. This will enable us to obtain much needed information on, notably, the Ghadar Party."
  ww1_raj.8.a:0 "Wonderful."
 
- ww1_raj.9.t:0 "Britain Denies Reforms!"
- ww1_raj.9.d:0 "Prime Minister [ENG.getleader] has announced today that he will not put up with the reforms demanded by the National Indian Congress."
+ ww1_raj.9.t:0 "[USA.GetName] Doesn't Want to Cooperate!"
+ ww1_raj.9.d:0 "President [USA.getleader] has responded negatively to our offer to co-operate in matters related to seditious Indian movements. This will prevent us to obtain much needed information on, notably, the Ghadar Party."
  ww1_raj.9.a:0 "Quite the setback."
 
  ww1_raj.10.t:0 "The Question of Natal"
