--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10424,9 +10424,7 @@ skip_focus:0 "§YSkip Focus :§!"
 RAJ_imperial_bank_of_india_trait:0 "Imperial Bank of India"
 RAJ_simla_convention_relation:0 "Simla Convention"
 RAJ_denounced_us:0 "Denounced us!"
-RAJ_cooperated_with_us:0 "Cooperated with us"
 RAJ_exploited_us:0 "Exploited us!"
-RAJ_fight_for_the_empire_relation:0 "Fought for the Empire"
 RAJ_french_delegation_relation:0 "Sent us a Delegation"
 RAJ_saf_favored_the_raj:0 "Favoured the Raj"
 RAJ_raj_favored_the_raj:0 "Favoured the Raj"
@@ -10658,11 +10656,11 @@ RAJ_indian_factories_act:0 "Indian Factories Act"
 RAJ_indian_factories_act_desc:0 ""
 RAJ_builder_of_the_raj:0 "Builder of the Raj"
 RAJ_builder_of_the_raj_desc:0 "Charles Hardinge has great industrial projects planned for the Raj. From schools to railways, the Viceroy and Governor-General of India will guide the construction of the Raj for years to come, and his name will be remembered for a hundred years, if not more."
-RAJ_placate_the_nationalists:0 "Placate the Nationalists"
+RAJ_placate_the_nationalists:0 "Concessions to the Nationalists"
 RAJ_placate_the_nationalists_desc:0 "Through his hard work and diplomatic skills, [RAJ.GetLeader] has paved the way for closer cooperation with the Indian National Congress. As a result, radicalism within the Congress has diminished and we can focus on more pressing matters."
 RAJ_august_declaration:0 "August Declaration"
 RAJ_august_declaration_desc:0 ""
-RAJ_montagu_chelmsford_reforms:0 "Announce Montagu-Chelmsford Reforms"
+RAJ_montagu_chelmsford_reforms:0 "Establish Reformist Committees"
 RAJ_montagu_chelmsford_reforms_desc:0 ""
 RAJ_government_of_india_act_1912:0 "Reorganization of Bengal"
 RAJ_government_of_india_act_1912_desc:0 ""
@@ -10687,6 +10685,14 @@ RAJ_rowlatt_committee:0 "Rowlatt Committee"
 RAJ_rowlatt_committee_desc:0 ""
 RAJ_rowlatt_act:0 "Rowlatt Act"
 RAJ_rowlatt_act_desc:0 ""
+RAJ_foreign_and_political_department:0 "Foreign and Political Department"
+RAJ_foreign_and_political_department_desc:0 ""
+RAJ_survey_of_india:0 "Survey of India"
+RAJ_survey_of_india_desc:0 ""
+RAJ_hardinge_ascension:0 "Lord Hardinge Ascendency"
+RAJ_hardinge_ascension_desc:0 ""
+RAJ_indian_diplomacy:0 "Indian Diplomacy"
+RAJ_indian_diplomacy_desc:0 ""
 
 RAJ_status_of_the_capital:0 "Status of the Capital"
 RAJ_status_of_the_capital_desc:0 "Calcutta has been the capital of the British Raj since its inception in 1858 following the Sepoy Rebellion, and has served us well ever since. However, Calcutta has its fair share of sanitary issues and calls for a change of capital have grown louder overtime. The question being: where should our administration go?"
@@ -10694,37 +10700,9 @@ RAJ_simla_convention:0 "Simla Convention"
 RAJ_simla_convention_desc:0 "With the recent independence of Tibet from China and London's meddling in its affairs, it is only natural that our administration sends a delegation to meet with the Tibetans and Chinese to discuss Tibet's position on the world stage, especially its geographical frontiers and relations with China."
 RAJ_denounce_south_africa:0 "Denounce South-Africa"
 RAJ_denounce_south_africa_desc:0 "Charles Hardinge has on several occasions expressed his disapproval of South Africa's anti-Indian laws, and it is time that our administration officially condemns the South African government to put its words into action."
-
-RAJ_organise_the_indian_national_congress:0 "Organise the Indian National Congress"
-RAJ_organise_the_indian_national_congress_desc:0 "Expecting the British to improve the situation of the Indian people is hopeless. If we hope to see a prosperous subcontinent one day, we can only rely on the Indian National Congress. However, this political force has recently suffered a series of setbacks, such as the Surat split of 1907, and the elitist nature of its members has prevented its message from spreading to the masses. A few changes in the organisation and leadership of the Congress may well be the push it needs to prosper."
-RAJ_cooperate_with_the_institutions_desc:0 "The recent consolidation of our movement has not left the British administration indifferent. We need to reassure them of our good intentions if we are to manoeuvre freely."
-RAJ_legacy_of_ao_hume:0 "Legacy of A. O. Hume"
-RAJ_legacy_of_ao_hume_desc:0 "As the founder of the Indian National Congress, Allan Octavian Hume has been the leading figure of our movement since its establishment in 1885. He has led the way towards peaceful cooperation with the British for the good of the Indian people, and we must follow his teachings if we wish to prevent (further) radicalisation of our movement."
-RAJ_push_for_ghandi_return:0 "Push for Ghandi Return"
-RAJ_push_for_ghandi_return_desc:0 ""
 RAJ_the_question_of_natal:0 "The Question of Natal"
 RAJ_the_question_of_natal_desc:0 ""
-RAJ_organized_pacifism:0 "Organised Pacifism"
-RAJ_organized_pacifism_desc:0 ""
-RAJ_organized_pacifism_reward:0 "Unlock the £GFX_decision_icon_small §YOrganised Pacifism§! decisions."
-RAJ_best_and_brightest_of_the_congress:0 "Best and Brightest of the Congress"
-RAJ_best_and_brightest_of_the_congress_desc:0 ""
-RAJ_the_irish_connection:0 "The Irish Connection"
-RAJ_the_irish_connection_desc:0 ""
-RAJ_boycott_british_goods:0 "Boycott British Goods"
-RAJ_boycott_british_goods_desc:0 ""
-RAJ_boycott_british_goods_reward:0 "We will launch a §YBoycott Campaign§! against British goods. London will then have to choose between §Ygiving in to our demands or ignoring them§!, the latter of which will §Rseverely damage their economy§!."
 
-RAJ_reformism:0 "Reformism"
-RAJ_reformism_desc:0 "As a result of the success of our boycott campaign, the British have finally caved in to our demands. A series of reforms have been passed by the British Parliament, allowing for greater representation of elected officials within the legislative framework."
-RAJ_appease_the_radicals:0 "Appease the Radicals"
-RAJ_appease_the_radicals_desc:0 "Having used the Swadeshi tactics of the radicals within the Congress and gained significant reforms from the British, we are in a position to reintegrate Tilak and his clique within the Indian National Congress."
-RAJ_reconciliate_with_the_muslim_league:0 "Reconciliate with the Muslim League"
-RAJ_reconciliate_with_the_muslim_league_desc:0 "Founded in 1906, the Muslim League was born out of the perceived need of the Muslim Indian community to have a platform to be represented at the national level, similar to the Indian National Congress. For many years we worked in opposition because of the power struggles between the Muslim and Hindu communities within the Raj. Said infighting caused by our common overlord's 'divide and conquer' strategy. It is only through cooperation and partnership that we will be able to impose greater pressure on the British administration and create a new, fairer India."
-RAJ_home_rule_movement:0 "Home Rule Movement"
-RAJ_home_rule_movement_desc:0 ""
-RAJ_fight_for_the_empire:0 "Fight for the Empire"
-RAJ_fight_for_the_empire_desc:0 ""
 RAJ_towards_dominionship:0 "Indian Constitution Act"
 RAJ_towards_dominionship_desc:0 ""
 
