RAJ Survey of India focus completed + Lord Hardinge GFX UPDATE

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8739,6 +8739,18 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  RAJ_appease_the_indian_national_congress:0 "Appease the Indian National Congress"
  RAJ_appease_the_all_india_muslim_league:0 "Appease the All-India Muslim League"
  
+ RAJ_survey_of_india_category:0 "Survey of India"
+
+ RAJ_terrain_analysis:0 "Conduct Terrain Analysis"
+ RAJ_terrain_analysis_desc:0 "By commissioning the Survey of India to carry out terrain analysis for the Indian Army, we will be able to defend the Raj more effectively."
+ RAJ_terrain_analysis_reward:0 "Modify '§YIndian Army§!' by:\nDivision Defence on core territory:§G +2.0%§!\n\nYou can select this £GFX_decision_icon_small §YDecision§! up to §Y8§! times."
+ RAJ_distribute_maps_to_the_army:0 "Distribute Maps to the Army"
+ RAJ_distribute_maps_to_the_army_desc:0 "The Survey of India will work with us to organise the widespread distribution of maps to officers."
+ RAJ_distribute_maps_to_the_army_reward:0 "Modify '§YIndian Army§!' by:\nDivision Defence on core territory:§G +4.0%§!"
+ RAJ_supply_lines_optimization:0 "Optimise the Supply Lines"
+ RAJ_supply_lines_optimization_desc:0 "By commissioning the Survey of India to help us optimise the supply lines for the Indian Army, we will be able to defend the Raj more effectively."
+ RAJ_supply_lines_optimization_reward:0 "Modify '§YIndian Army§!' by:\nSupply Combat Penalties on Core Territory:§G -2.0%§!\n\nYou can select this £GFX_decision_icon_small §YDecision§! up to §Y5§! times."
+ 
  RAJ_montagu_chelmsford_reforms_category:0 "Montagu-Chelmsford Reforms"
 
  RAJ_establish_committee_on_home_administration:0 "Establish the Committee on Home Administration"
