--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10523,13 +10523,13 @@ RAJ_aden_province:0 "Aden Province"
 RAJ_aden_province_desc:0 ""
 RAJ_strengthen_the_socotra_garrison:0 "Strengthen the Socotra Garrison"
 RAJ_strengthen_the_socotra_garrison_desc:0 ""
-RAJ_strengthen_the_socotra_garrison_reward:0 "Modify '§YIndian Army§!' by\nSpecial Forces Capacity Multiplier:§G +5.00%§!"
+RAJ_strengthen_the_socotra_garrison_reward:0 "Modify '§YIndian Army§!' by:\nSpecial Forces Capacity Multiplier:§G +5.00%§!"
 
 RAJ_burma_industrial_capacity:0 "Burma Industrial Capacity"
 RAJ_burma_industrial_capacity_desc:0 ""
 RAJ_defence_of_the_burmese_frontier:0 "Defence of the Burmese Frontier"
 RAJ_defence_of_the_burmese_frontier_desc:0 ""
-RAJ_defence_of_the_burmese_frontier_reward:0 "Modify '§YIndian Army§!' by\nDivision Defense:§G +5.00%§!"
+RAJ_defence_of_the_burmese_frontier_reward:0 "Modify '§YIndian Army§!' by:\nDivision Defense:§G +5.00%§!"
 
 RAJ_colonisation_of_the_andaman:0 "Colonisation of the Andaman"
 RAJ_colonisation_of_the_andaman_desc:0 ""
@@ -10538,27 +10538,27 @@ RAJ_kaalapani_desc:0 ""
 
 RAJ_indian_army_act:0 "Indian Army Act"
 RAJ_indian_army_act_desc:0 ""
-RAJ_indian_army_act_reward:0 "Modify '§YIndian Army§!' by\nDivision Attack:§G +5.00%§!\nDivision Defense:§G +5.00%§!\nDivision Attrition:§G -5.00%§!\nDivision Organization:§G +5.00%§!"
+RAJ_indian_army_act_reward:0 "Modify '§YIndian Army§!' by:\nDivision Attack:§G +5.00%§!\nDivision Defense:§G +5.00%§!\nDivision Attrition:§G -5.00%§!\nDivision Organization:§G +5.00%§!"
 
 RAJ_defence_of_the_northwest_frontier:0 "Defence of the Northwest Frontier"
 RAJ_defence_of_the_northwest_frontier_desc:0 ""
-RAJ_defence_of_the_northwest_frontier_reward:0 "Modify '§YIndian Army§!' by\nDivision Defense:§G +5.00%§!"
+RAJ_defence_of_the_northwest_frontier_reward:0 "Modify '§YIndian Army§!' by:\nDivision Defense:§G +5.00%§!"
 
 RAJ_enlist_gurkhas:0 "Enlist Gurkhas"
 RAJ_enlist_gurkhas_desc:0 ""
-RAJ_enlist_gurkhas_reward:0 "Modify '§YIndian Army§!' by\nSpecial Forces Capacity Multiplier:§G +10.00%§!"
+RAJ_enlist_gurkhas_reward:0 "Modify '§YIndian Army§!' by:\nSpecial Forces Capacity Multiplier:§G +10.00%§!"
 
 RAJ_ramp_up_military_budget:0 "Ramp-up Military Budget"
 RAJ_ramp_up_military_budget_desc:0 "The Indian Army is currently the costliest army in the world. It costs India 52 Pound per head, which is astonishingly high compared to the second costliest army in the world, the British Army at 21 Pound per head. In an effort to reduce our military expenditure in the long term, we will double it over the course of a year."
-RAJ_ramp_up_military_budget_reward:0 "Modify '§YIndian Army§!' by\nConsumer Goods Factories factor:§Y -5.00%§!"
+RAJ_ramp_up_military_budget_reward:0 "Modify '§YIndian Army§!' by:\nConsumer Goods Factories factor:§Y -5.00%§!"
 
 RAJ_indianisation_of_the_officer_corps:0 "Indianisation of the Officer Corps"
 RAJ_indianisation_of_the_officer_corps_desc:0 ""
-RAJ_indianisation_of_the_officer_corps_reward:0 "Modify '§YIndian Army§!' by\nDivision Attrition:§G -10.00%§!\nPlanning Speed:§G +10.00%§!\nMax planning factor:§R -10.00%§!\nArmy Experience Gain:§R -0.02§! daily"
+RAJ_indianisation_of_the_officer_corps_reward:0 "Modify '§YIndian Army§!' by:\nDivision Attrition:§G -10.00%§!\nPlanning Speed:§G +10.00%§!\nMax planning factor:§R -10.00%§!\nArmy Experience Gain:§R -0.02§! daily"
 
 RAJ_pursue_kitchener_reforms:0 "Pursue Kitchener Reforms"
 RAJ_pursue_kitchener_reforms_desc:0 ""
-RAJ_pursue_kitchener_reforms_reward:0 "Modify '§YIndian Army§!' by\nDivision Organization:§G +10.00%§!\nArmy Experience Gain:§G +0.03§! daily"
+RAJ_pursue_kitchener_reforms_reward:0 "Modify '§YIndian Army§!' by:\nDivision Organization:§G +10.00%§!\nArmy Experience Gain:§G +0.03§! daily"
 
 RAJ_the_grand_war:0 "The Grand War"
 RAJ_the_grand_war_desc:0 ""
@@ -10589,7 +10589,7 @@ RAJ_calcutta_dockyards:0 "Calcutta Dockyards"
 RAJ_calcutta_dockyards_desc:0 ""
 RAJ_the_path_to_mesopotamia:0 "The Path to Mesopotamia"
 RAJ_the_path_to_mesopotamia_desc:0 ""
-RAJ_the_path_to_mesopotamia_reward:0 "Modify '§YIndian Army§!' by\nInvasion Preparation Speed:§G +25.00%§!"
+RAJ_the_path_to_mesopotamia_reward:0 "Modify '§YIndian Army§!' by:\nInvasion Preparation Speed:§G +25.00%§!"
 
 RAJ_internal_security:0 "Internal Security"
 RAJ_internal_security_desc:0 ""
@@ -10597,35 +10597,35 @@ RAJ_integrate_burma:0 "Integrate Burma"
 RAJ_integrate_burma_desc:0 ""
 RAJ_empower_the_ghq:0 "Empower the GHQ"
 RAJ_empower_the_ghq_desc:0 ""
-RAJ_empower_the_ghq_reward:0 "Modify '§YIndian Army§!' by\nDivision Organization:§G +10.00%§!"
+RAJ_empower_the_ghq_reward:0 "Modify '§YIndian Army§!' by:\nDivision Organization:§G +10.00%§!"
 
 RAJ_diversified_equipments:0 "Diversified Equipments"
 RAJ_diversified_equipments_desc:0 ""
-RAJ_diversified_equipments_reward:0 "Modify '§YIndian Army§!' by\nEquipment Capture Ratio Modifier:§G +20.00%§!\nLicense purchase cost:§R -50.00%§!"
+RAJ_diversified_equipments_reward:0 "Modify '§YIndian Army§!' by:\nEquipment Capture Ratio Modifier:§G +20.00%§!\nLicense purchase cost:§R -50.00%§!"
 
 RAJ_adopt_british_models:0 "Adopt British Models"
 RAJ_adopt_british_models_desc:0 ""
-RAJ_adopt_british_models_reward:0 "Modify '§YIndian Army§!' by\nLicense purchase cost:§G +50.00%§!\nEquipment Capture Ratio Modifier:§R -15.00%§!"
+RAJ_adopt_british_models_reward:0 "Modify '§YIndian Army§!' by:\nLicense purchase cost:§G +50.00%§!\nEquipment Capture Ratio Modifier:§R -15.00%§!"
 
 RAJ_indian_staff_college:0 "Indian Staff College"
 RAJ_indian_staff_college_desc:0 ""
-RAJ_indian_staff_college_reward:0 "Modify '§YIndian Army§!' by\nTraining time:§G -10.00%§!\nPlanning Speed:§G +5.00%§!"
+RAJ_indian_staff_college_reward:0 "Modify '§YIndian Army§!' by:\nTraining time:§G -10.00%§!\nPlanning Speed:§G +5.00%§!"
 
 RAJ_deal_with_the_officers_shortage:0 "Deal with the Officer Shortage"
 RAJ_deal_with_the_officers_shortage_desc:0 ""
-RAJ_deal_with_the_officers_shortage_reward:0 "Modify '§YIndian Army§!' by\nReinforce Rate:§G +10.00%§!\nPlanning Speed:§G +5.00%§!"
+RAJ_deal_with_the_officers_shortage_reward:0 "Modify '§YIndian Army§!' by:\nReinforce Rate:§G +10.00%§!\nPlanning Speed:§G +5.00%§!"
 
 RAJ_reorganise_the_chain_of_command:0 "Reorganise the Chain of Command"
 RAJ_reorganise_the_chain_of_command_desc:0 ""
-RAJ_reorganise_the_chain_of_command_reward:0 "Modify '§YIndian Army§!' by\nDaily Command Power Gain Multiplier:§G +25.00%§!\nDivision Attack:§G +5.00%§!\nDivision Defense:§G +5.00%§!"
+RAJ_reorganise_the_chain_of_command_reward:0 "Modify '§YIndian Army§!' by:\nDaily Command Power Gain Multiplier:§G +25.00%§!\nDivision Attack:§G +5.00%§!\nDivision Defense:§G +5.00%§!"
 
 RAJ_adapt_our_supportives_services:0 "Adapt our Supportives Services"
 RAJ_adapt_our_supportives_services_desc:0 ""
-RAJ_adapt_our_supportives_services_reward:0 "Modify '§YIndian Army§!' by\nDivision Attrition:§G -25.00%§!\nDivision speed:§G +10.00%§!\nReinforce Rate:§G +5.00%§!"
+RAJ_adapt_our_supportives_services_reward:0 "Modify '§YIndian Army§!' by:\nDivision Attrition:§G -25.00%§!\nDivision speed:§G +10.00%§!\nReinforce Rate:§G +5.00%§!"
 
 RAJ_war_of_opportunity:0 "War of Opportunity"
 RAJ_war_of_opportunity_desc:0 ""
-RAJ_war_of_opportunity_reward:0 "Modify '§YIndian Army§!' by\nCommander as Advisor Cost:§G +50.00%§!"
+RAJ_war_of_opportunity_reward:0 "Modify '§YIndian Army§!' by:\nCommander as Advisor Cost:§G +50.00%§!"
 
 RAJ_third_anglo_afghan_war:0 "Third Anglo-Afghan War"
 RAJ_third_anglo_afghan_war_desc:0 ""
@@ -10689,6 +10689,7 @@ RAJ_foreign_and_political_department:0 "Foreign and Political Department"
 RAJ_foreign_and_political_department_desc:0 ""
 RAJ_survey_of_india:0 "Survey of India"
 RAJ_survey_of_india_desc:0 ""
+RAJ_survey_of_india_reward:0 "\nCompleting this focus will unlock several §Yexcavation§! and §Ydefence§! focuses on the §YIndustrial§! side of the National focus tree.\n\nCompleting this focus will unlock several £GFX_decision_icon_small §YDecision§! which will allow us to commission the Survey of India to improve the §YIndian Army§! should we fight on the §Rhome front§!."
 RAJ_hardinge_ascension:0 "Lord Hardinge Ascendency"
 RAJ_hardinge_ascension_desc:0 ""
 RAJ_indian_diplomacy:0 "Indian Diplomacy"
