operation for egypt

--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1070,7 +1070,10 @@
  TRS_egyptian_offensive_2_desc:0 "Unlike the first Egyptian offensive, the second offensive is set to be a all-in conquest of egypt with a decisive victory."
  TRS_bedouin_support:0 "Bedouin Support"
  TRS_bedouin_support_desc:0 "Bedouins are a nomadic Arab tribe that predominantly occupies Levant and Sinai. As their population is distributed in both our empire and Egypt, having their support is influential for our struggle in the region."
-
+ TRS_pro_ottoman_opposition:0 "Pro-Ottoman Opposition"
+ TRS_pro_ottoman_opposition_desc:0 "Despite our war with the Ottomans, the Egyptian society stands loyal to the Ottoman Pan-Islamism idea. This results in our war being extremely unpopular and making our common soldiers and citizens alike oppose the conflict."
+ TRS_national_party_opposition:0 "National Party Opposition"
+ TRS_national_party_opposition_desc:0 "Al-Hizn al-Watani, also known as the national party, is an anti-British pro-independence political party. To achieve their goal, they're suspected to be working with the Ottoman government."
 
  TUR_ottoman_industrial_investment:0 "Ottoman Industrial Investment"
  TUR_ottoman_military_mission:0 "Ottoman Military Mission"
