--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2776,6 +2776,8 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_disband_bedouin_volunteers:0 "Disband Bedouin Volunteers"
  TUR_disband_bedouin_volunteers_desc:0 "Though we've previously alligned with the Bedouin volunteers, they pose a threat to the centralization of our state. Since they're no longer of use to us, we can disband them and revoke their privilages."
  TUR_disband_bedouin_volunteers_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£construction_speed_texticon  Local Construction Speed: §G+5%§!\nModify the state's modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.60%§!\n£war_support_modifiericons_texticon  War Support: §R-0.60%§!\n"
+ EGY_ban_national_party:0 "Ban the National Party"
+ EGY_ban_national_party_desc:0 "Al-Hizn al-Watani, also known as the national party, has been causing us trouble by promoting anti-war and pro-Ottoman messages. As they're both a hindrance on our war effort, and a trouble on our relations with Britain, best course of action would be to ban them."
 
  TUR_decision_cost_minority:0 "[TUR.turkeyminoritycost]"
  TUR_decision_cost_minority_blocked:0 "[TUR.turkeyminoritycostblocked]"
