first egyptian decision for ottomans

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4490,6 +4490,15 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman_syria.8.t:0 "[FROM.GetName] Refuses to Send Artillery"
  ottoman_syria.8.d:0 "Our regional command is in a dire need of artillery equipment. Though we've asked for some piece shipments from the central government, they themselves don't have enough pieces to spare."
  ottoman_syria.8.a:0 "We'll ask them again later."
+ ottoman_syria.9.t:0 "Pro-Ottoman Opposition Grows"
+ ottoman_syria.9.d:0 "Despite our war with the Ottomans, out population and aristocracy remains firmly loyal or at least in favor to the Ottoman Pan-Islamist ideals. As the Ottomans are also aware of it, they've started a propaganda campaign to stir up opposition in our country against the war effort. Unless its tackled, this opposition is surely to grow."
+ ottoman_syria.9.a:0 "We'll have to tackle this fast."
+ ottoman_syria.10.t:0 "Al-Hizb al-Watani Opposition"
+ ottoman_syria.10.d:0 "Al-Hizb al-Watani, also known as the National Party, is a nationalist pro-independence party. The party firmly opposes our allignment with the Western powers. Ottomans, already involved with out internal matters, use this to their opportunity by supporting to party to damage our war effort."
+ ottoman_syria.10.a:0 "This party needs to be outlawed."
+ ottoman_syria.11.t:0 "Pro-Independence Voices Grow"
+ ottoman_syria.11.d:0 "Our war with the Ottomans has failed to gain the traction from a large part of our society. Pro-independence and pan-islamist voices have been opposing our war against the Ottomans. As Ottomans support and aid these groups, they make their voices heard a little louder than they otherwise would."
+ ottoman_syria.11.a:0 "Pro-independence? More like pro-Ottoman."
 
  ottoman..120.t:0 "Sects Mobilize"
  ottoman..120.d:0 "With the start of the war, conservative sects supporting our regime has started to send volunteer forces in an effort to aid us in our war effort."
