--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1072,8 +1072,11 @@
  TRS_bedouin_support_desc:0 "Bedouins are a nomadic Arab tribe that predominantly occupies Levant and Sinai. As their population is distributed in both our empire and Egypt, having their support is influential for our struggle in the region."
  TRS_pro_ottoman_opposition:0 "Pro-Ottoman Opposition"
  TRS_pro_ottoman_opposition_desc:0 "Despite our war with the Ottomans, the Egyptian society stands loyal to the Ottoman Pan-Islamism idea. This results in our war being extremely unpopular and making our common soldiers and citizens alike oppose the conflict."
+ TRS_pro_ottoman_opposition_instant_desc:0 "§RWill be removed if we're no longer at war with [TUR.GetName]§!"
  TRS_national_party_opposition:0 "National Party Opposition"
  TRS_national_party_opposition_desc:0 "Al-Hizn al-Watani, also known as the national party, is an anti-British pro-independence political party. To achieve their goal, they're suspected to be working with the Ottoman government."
+ TRS_pro_independence_voices:0 "Pro-Independence Voices"
+ TRS_pro_independence_voices_desc:0 "As the Ottomans support various pro-independence and pro-Ottoman voices, this spreads through our society to pressure our government on our war against the Ottomans."
 
  TUR_ottoman_industrial_investment:0 "Ottoman Industrial Investment"
  TUR_ottoman_military_mission:0 "Ottoman Military Mission"
