--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2776,6 +2776,12 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_disband_bedouin_volunteers:0 "Disband Bedouin Volunteers"
  TUR_disband_bedouin_volunteers_desc:0 "Though we've previously alligned with the Bedouin volunteers, they pose a threat to the centralization of our state. Since they're no longer of use to us, we can disband them and revoke their privilages."
  TUR_disband_bedouin_volunteers_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£construction_speed_texticon  Local Construction Speed: §G+5%§!\nModify the state's modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.60%§!\n£war_support_modifiericons_texticon  War Support: §R-0.60%§!\n"
+ TUR_boost_egyptian_opposition:0 "Boost Egyptian Opposition"
+ TUR_boost_egyptian_opposition_desc:0 "Egyptian population and aristocracy for the most part still stands loyal to the Ottoman Caliph and Pan-Islamist ideals. As we're embroiled in a war with them, we can stir up the Egyptian opposition to sabotage the war effort of our enemies."
+ TUR_contact_with_the_national_party:0 "Contact with the National Party"
+ TUR_contact_with_the_national_party_desc:0 "Al-Hizb al-Watani, also known as the National Party, is an Egyptian pro-independence nationalist party. As they also oppose this war against our empire, we can fund and promote their agenda in order to increase anti-war messages."
+ TUR_promote_pro_independence_voices:0 "Promote pro-Independence Voices"
+ TUR_promote_pro_independence_voices_desc:0 "A large part of the Egyptian society opposes their war against our empire. Though remaining marginalized, we'll aid these groups in order to make their voices heard more."
  EGY_ban_national_party:0 "Ban the National Party"
  EGY_ban_national_party_desc:0 "Al-Hizn al-Watani, also known as the national party, has been causing us trouble by promoting anti-war and pro-Ottoman messages. As they're both a hindrance on our war effort, and a trouble on our relations with Britain, best course of action would be to ban them."
 
