--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10532,7 +10532,7 @@ FIN_pardon_the_reds_desc: "Even though at least according to some not just all t
 FIN_recover_from_cw: "Recover From Civil War"
 FIN_recover_from_cw_desc: "Now finally when the fighting has stopped and the last rebels have surrendered we can finally focus on rebuilding and recovering our nation, its people and economy."
 FIN_white_guard_act: "Civil Guard Act"
-FIN_white_guard_act_desc: "After the end of the civil war the White Guards that formed the backbone of our army during the civil war have been marginalized in favor of the regular army which have led to some of their leader demanding us to recognise them as an independent Organisation."
+FIN_white_guard_act_desc: "After the end of the civil war the White Guards that formed the backbone of our army during the civil war have been marginalized in favor of the regular army which have led to some of their leader demanding us to recognise them as an independent Organisation rather than a part of the army."
 FIN_torppari_laki: "Act on Redemption of Leased Areas"
 FIN_torppari_laki: "There have been problems with tenant farmer agreements since forever because of the very unclear and confusing content in those agreements. So far there have been two temporary acts to ease the problem in 1909 and in 1915 but to finally end this problem once and for all we should allow the Tenant farmers to redeem the lands they have been using from their overlords."
 FIN_invite_ostsee_division: "Request German Support"
@@ -10547,6 +10547,16 @@ FIN_disarm_russian_garrisons: "Disarm Foreign Garrisons"
 FIN_disarm_russian_garrisons_desc: "Even though our country has been independent for some time now there are still many foreign garrisons in our territory. We should disarm those garrisons and send the soldiers back to their country and use their weapons to equip our own army."
 FIN_civilwar_conscription: "Temporary Universal Conscription"
 FIN_civilwar_conscription_desc: "In order to get more men into the frontlines we need to declare temporary universal conscription for all men. This can legally be done according to the 1878 conscription act so this shouldn't cause any serious problems between the civilian and military leaderships."
+FIN_foreign_policy: "Now that we have finally secured independece for our nation we have to determine our directions for future foreign policy."
+FIN_foreign_policy: "Estabilish Minsitery for Foreign Affairs"
+FIN_volunteers_to_EST: "Help Out Our Brothers in Estonia"
+FIN_volunteers_to_EST_desc: "We have so far been able to secure and sort of stabilize our nation but now our brothers in Estonia are in need of help. Even though our nation isn't in the best shape we should still help out our Finno-Ugric brothers and by doing that we would alse secure ourselves a new ally."
+FIN_approach_entente: "Approach Entente"
+FIN_approach_entente_desc: "Now when the Germans have lost the Great war we should turn our boat around and try to first get recognisition from the Entente and then humanitarian aid and protection later on."
+FIN_establish_military_academy: "Establish Cadet School"
+FIN_establish_military_academy_desc: ""
+FIN_1919_parliamentary_election: "Hold New and Free Elections"
+FIN_1919_parliamentary_election_desc: ""
 
 FIN_pardon_the_reds_days_tt: "Current days are: [?FIN_pardon_the_reds:days|Y0]"
 FIN_pardon_the_reds_completed_tt: "Has completed focus §YPardon the Ones Who Didn't Fight§!"
